--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -1,32 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!--  One -->
-    <string name="code_was_">The code was</string>
-    <string name="code_was_sent_to">The code was sent to %s.</string>
-    <string name="new_code_info">You can generate a new code in %s minutes.</string>
-    <string name="the_code_was_sent_info">The code was sent to %1$s.\nYou can generate a new code in %2$s minutes.</string>
+    <!-- One -->
+    <string name="code_was_">"The code was"</string>
+    <string name="code_was_sent_to">"The code was sent to %s."</string>
+    <string name="new_code_info">"You can generate a new code in %s minutes."</string>
+    <string name="the_code_was_sent_info">"The code was sent to %1$s.
+You can generate a new code in %2$s minutes."</string>
 
-    <!--  Two -->
-    <string name="beautifull_planets">Beautifull planets</string>
-    <string-array name="planets_array">
-        <item>Mercury</item>
-        <item>Venus</item>
-        <item>Earth</item>
-        <item>Mars</item>
-    </string-array>
+    <!-- Two -->
+    <string name="beautifull_planets">"Beautifull planets"</string>
 
-    <!--  Three  -->
-    <string name="who_sings_this_song">Who sings this song?</string>
+    <!-- Three -->
+    <string name="who_sings_this_song">"Who sings this song?"</string>
     <plurals name="numberOfSongsAvailable">
-        <!--
-             As a developer, you should always supply "one" and "other"
-             strings. Your translators will know which strings are actually
-             needed for their language. Always include %d in "one" because
-             translators will need to use %d for languages where "one"
-             doesn't mean 1 (as explained above).
-          -->
-        <item quantity="one">%d song found.</item>
-        <item quantity="other">%d songs found.</item>
+        <item quantity="one">"%d song found."</item>
+        <item quantity="other">"%d songs found."</item>
     </plurals>
 </resources>
